--- a/Cimob/Cimob.csproj
+++ b/Cimob/Cimob.csproj
@@ -5,11 +5,29 @@
     <UserSecretsId>aspnet-Cimob-4EF90CC8-68C5-40DF-90AE-E1A6E9412CA5</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Views\AjudaAutenticacaos1\**" />
+    <Content Remove="Views\AjudaAutenticacaos1\**" />
+    <EmbeddedResource Remove="Views\AjudaAutenticacaos1\**" />
+    <None Remove="Views\AjudaAutenticacaos1\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\AjudaAutenticacaoController.cs" />
+    <Compile Remove="Services\AuthMessageSenderOptions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="wwwroot\css\login.css" />
+    <Content Remove="wwwroot\images\erasmus.jpg" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" PrivateAssets="All" />
+    <PackageReference Include="SendGrid" Version="9.9.0" />
   </ItemGroup>
 
   <ItemGroup>
