--- a/Cimob/appsettings.json
+++ b/Cimob/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Cimob-4EF90CC8-68C5-40DF-90AE-E1A6E9412CA5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Cimob-4EF90CC8-68C5-40DF-90AE-E1A6E9412CA5;Trusted_Connection=True;MultipleActiveResultSets=true",
+  
+
   },
   "Logging": {
     "IncludeScopes": false,
