--- a/Cimob/Cimob.csproj
+++ b/Cimob/Cimob.csproj
@@ -14,7 +14,6 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\AjudaAutenticacaoController.cs" />
-    <Compile Remove="Services\AuthMessageSenderOptions.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +33,7 @@
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.1" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
+    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
