--- a/Cimob/appsettings.json
+++ b/Cimob/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Cimob-4EF90CC8-68C5-40DF-90AE-E1A6E9412CA5;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "Azure": "Server=tcp:cimobesw1718dbserver.database.windows.net, 1433;Initial Catalog=CimobEsw1718_db;Persist Security Info=False;User ID=Carla;Password=Cunha.94;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "Azure": "Server=tcp:cimobesw.database.windows.net, 1433;Initial Catalog=CIMOBESW;Persist Security Info=False;User ID=Cimob;Password=Santos.21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
 
   },
