--- a/Cimob/Cimob.csproj
+++ b/Cimob/Cimob.csproj
@@ -52,4 +52,8 @@
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
